--- a/templates/home/page.html.twig
+++ b/templates/home/page.html.twig
@@ -5,7 +5,7 @@
 
 {% block body %}
 <article>
-    <h2>{{ page.title ?? '' }}</h2>
+    <h2 class="blue text-center my-5">{{ page.title ?? '' }}</h2>
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
