--- a/templates/home/faq.html.twig
+++ b/templates/home/faq.html.twig
@@ -5,18 +5,28 @@
 
 {% block body %}
 
-        <h1>Foire aux Questions</h1>
+	<h2 class="text-center blue">Foire aux Questions</h2>
 
-        <section>
-            {% for faq in faqs %}
-                <article>
-                    <div>
-                        <p>{{ faq.question }}</p>
-                    </div>
-                    <div>
-                        <p>{{ faq.answer }}</p>
-                    </div>
-                </article>                    
-            {% endfor %}
-        </section>
+	<section class="accordion my-5" id="accordion">
+		{% for faq in faqs %}
+			<article class="card">
+				<div class="card-header" id="heading{{ faq.id }}">
+					<h3 class="mb-0">
+						<button class="red font-weight-bold text-decoration-none btn btn-link btn-block text-left {{ loop.first ? '' : 'collapsed' }}" type="button" data-toggle="collapse" data-target="#collapse{{ faq.id }}" aria-expanded="{{ loop.first ? true : false }}" aria-controls="collapse{{ faq.id }}">
+							{{ faq.question }}
+						</button>
+					</h3>
+				</div>
+
+				<div id="collapse{{ faq.id }}" class="collapse {{ loop.first ? 'show' : '' }}" aria-labelledby="heading{{ faq.id }}" data-parent="#accordion">
+					<p class="card-body">
+						{{ faq.answer }}
+					</p>
+				</div>
+			</article>
+		{% endfor %}
+	</section>
+
+
+
 {% endblock %}
